[metadata]
name = pms5003-async
description = PMS5003 Air Quality Sensor with asyncio
long_description = file: README.md
long_description_content_type = text/markdown
version = attr:pms5003_async.__version__
url = https://github.com/devinrsmith/pms5003-async
project_urls =
    Source Code = https://github.com/devinrsmith/pms5003-async
    Bug Tracker = https://github.com/devinrsmith/pms5003-async/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
keywords = sensor, pms5003
author = Devin Smith
author_email = devinsmith@deephaven.io
platforms = any
license = Apache License 2.0
license_files = 
    LICENSE

[options]
package_dir=
    =src
packages=find:
install_requires =
    aioserial

[options.packages.find]
where=src
